@@ -95,6 +95,7 @@ Brandy_xxx  (SWI numbers start &140000)
 				R2: Pointer to screen memory base
 				R3: Size of screen memory.
 				R4: Base of MODE 7 frame buffer
+				R5: SDL surface handle (pointer)
 
 &140003 Brandy_SetFailoverMode	R0: Set mode to be selected should chosen screen
 				    mode be unavailable (instead of returning
