@@ -556,6 +556,7 @@ typedef struct {
   byte *modescreen_ptr;			/* Mode screen pointer */
   uint32 modescreen_sz;			/* Mode screen size */
   uint32 mode7fb;			/* Start of MODE 7 frame buffer space */
+  SDL_Surface *surface;			/* SDL Surface handle for screen0 */
 #endif
 } matrixbits;
 extern matrixbits matrixflags;
